--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -348,6 +348,19 @@ i.feature-circle {
   line-height: 52px;
 }
 
+ul.badges {
+  text-align: right;
+  margin-top: 45px;
+  font-size: 0;
+  list-style: none;
+  padding: 0;
+
+  li {
+    margin: 10px 0;
+    padding: 0;
+  }
+}
+
 div.text-block {
   margin: 15px 0;
   &.text-block-centered {
