Added usage info for the search

--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -688,3 +688,9 @@ div.doc-styling div.gsc-control-cse {
     }
   }
 }
+
+.google-custom-search .search-usage-info {
+  text-align: right;
+  font-size: 13px;
+  padding-top: 5px;
+}
