Updated focus color for theme

--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -19,6 +19,7 @@ $border-radius-large: 0;
 $border-radius-small: 0;
 
 $brand-primary: #77304c;
+$input-border-focus: $brand-primary;
 $gray: #3d3b3c;
 $toner: #111;
 $lektor-header-bg: #3d3639;
