Renamed blog layout template

--- a/templates/blog-archive/month.html
+++ b/templates/blog-archive/month.html
@@ -1,4 +1,4 @@
-{% extends "blog_layout.html" %}
+{% extends "blog-layout.html" %}
 {% block title %}{{ this.date|dateformat('MMMM yyyy') }} Archive | The Transcript{% endblock %}
 {% block blog_body %}
   <h1>The Transcript, {{ this.date|dateformat('MMMM yyyy') }}</h1>
