--- a/templates/blog-archive/year.html
+++ b/templates/blog-archive/year.html
@@ -1,4 +1,4 @@
-{% extends "blog_layout.html" %}
+{% extends "blog-layout.html" %}
 {% block title %}{{ this.year }} Archive | The Transcript{% endblock %}
 {% block blog_body %}
   <h1>The Transcript in {{ this.year }}</h1>
