--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,4 +1,4 @@
-{% extends "blog_layout.html" %}
+{% extends "blog-layout.html" %}
 {% from "macros/pagination.html" import render_pagination %}
 {% block title %}The Transcript{% endblock %}
   {% block blog_body %}
