--- a/templates/blog-archive/index.html
+++ b/templates/blog-archive/index.html
@@ -1,4 +1,4 @@
-{% extends "blog_layout.html" %}
+{% extends "blog-layout.html" %}
 {% block title %}Archive | The Transcript{% endblock %}
 {% block blog_body %}
   <h1>The Transcript Archive</h1>
