Added chat bubble to footer

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,6 +56,8 @@
             ><i class="fa fa-bug"></i></a>
           <a href="https://twitter.com/getlektor" title="Find Lektor on Twitter"
             ><i class="fa fa-twitter"></i></a>
+          <a href="https://gitter.im/lektor/lektor" title="Chat on Gitter"
+            ><i class="fa fa-comment"></i></a>
           {%- if this.path %}
           <a href="https://github.com/lektor/lektor-website/tree/master/content{{ this.path
             }}/contents.lr" title="View source for this page"><i class="fa fa-code"></i></a>
