An attempt to fix #3, bumping the interval
From default (5000) to 8500.

--- a/templates/blocks/slideshow.html
+++ b/templates/blocks/slideshow.html
@@ -2,7 +2,7 @@
 <div class="slideshow-wrapper">
   <div class="slideshow">
     <div class="slideshow-inner">
-      <div class="carousel slide" data-ride="carousel" id="{{ carousel_id }}">
+      <div class="carousel slide" data-ride="carousel" data-interval="8500" id="{{ carousel_id }}">
         {#
         <ol class="carousel-indicators">
         {% for slide in this.slides.blocks %}
