Added docs on system fields

--- a/templates/macros/docs.html
+++ b/templates/macros/docs.html
@@ -11,7 +11,7 @@
   <i class="glyphicon glyphicon-console"></i>
   {%- elif page.type == 'event' -%}
   <i class="glyphicon glyphicon-flash"></i>
-  {%- elif page.type == 'type' -%}
+  {%- elif page.type == 'type' or page.type == 'sysfield' -%}
   <i class="glyphicon glyphicon-pencil"></i>
   {%- else -%}
   <i class="glyphicon glyphicon-list-alt"></i>
