banner -> page-banner because adblock -.-

--- a/templates/blocks/banner.html
+++ b/templates/blocks/banner.html
@@ -1,5 +1,5 @@
 {% set image = record.attachments.get(this.image) %}
-<div class="banner banner-{{ this.height }}" style="background-image: url({{ image|url
+<div class="page-banner page-banner-{{ this.height }}" style="background-image: url({{ image|url
   }})">{% if this.contents %}
   {{ this.contents }}
 {% endif %}</div>
