--- a/templates/blog-layout.html
+++ b/templates/blog-layout.html
@@ -3,7 +3,7 @@
 {% block outerbody %}
   {% set image = site.get('/blog').attachments.images.first() %}
   {% if image %}
-    <div class="banner" style="background-image: url({{ image|url }}); height: 200px"></div>
+    <div class="page-banner page-banner-200" style="background-image: url({{ image|url }})"></div>
   {% endif %}
   {{ super() }}
 {% endblock %}
