--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -292,6 +292,7 @@ div.doc-styling {
       padding: 0!important;
       display: inline;
       background: transparent;
+      font-family: $font-family-base;
     }
     code.mod {
       color: $toner;
