--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{{ '/static/styles.css'|asseturl }}">
 <link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
-<title>{% block title %}Hello{% endblock %} | Lektor Static Website Engine</title>
+<title>{% block title %}Hello{% endblock %} | Lektor Static Content Management System</title>
 <body class="{% block bodyclass %}default{% endblock %}">
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
