--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -264,6 +264,14 @@ div.blog-post {
   }
 }
 
+div.nav-prev {
+  float: left;
+}
+
+div.nav-next {
+  float: right;
+}
+
 div.page-banner {
   margin: 15px 0;
   background-size: cover;
