Documented virtual paths

--- a/templates/blog-archive/year.html
+++ b/templates/blog-archive/year.html
@@ -3,7 +3,7 @@
 {% block blog_body %}
   <h1>The Transcript in {{ this.year }}</h1>
   <p>
-    <a href="{{ this.archive_index|url }}">&laquo; Back to the archive</a>
+    <a href="{{ '..'|url }}">&laquo; Back to the archive</a>
   <ul>
   {% for archive, items in this.items_by_months %}
     <li><a href="{{ archive|url }}">{{ archive.date|dateformat('MMMM') }}</a>:
