--- a/templates/blog-layout.html
+++ b/templates/blog-layout.html
@@ -33,8 +33,7 @@
       </ul>
       <h3>Missed a Post?</h3>
       <ul>
-        {% set archive = get_blog_archive() %}
-        <li><a href="{{ archive|url }}">Blog Archives</a>
+        <li><a href="{{ '$blog-archive'|url }}">Blog Archives</a>
       </ul>
     </div>
   </div>
