--- a/templates/blog-archive/month.html
+++ b/templates/blog-archive/month.html
@@ -3,7 +3,7 @@
 {% block blog_body %}
   <h1>The Transcript, {{ this.date|dateformat('MMMM yyyy') }}</h1>
   <p>
-    <a href="{{ this.year_archive|url }}">&laquo; Back to {{ this.year }}</a>
+    <a href="{{ '..'|url }}">&laquo; Back to {{ this.year }}</a>
   <ul>
   {% for post in this.items %}
     <li><a href="{{ post|url }}">{{ post.title }}</a> by {{ post.author }} on {{ post.pub_date|dateformat }}
