Imported new images

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,7 +49,7 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 icon-bar">
+        <div class="col-sm-4 icon-bar">
           <a href="https://github.com/lektor/lektor/" title="Lektor on Github"
             ><i class="fa fa-github"></i></a>
           <a href="https://github.com/lektor/lektor/issues/" title="Report Issues for Lektor"
@@ -63,8 +63,8 @@
             }}/contents.lr" title="View source for this page"><i class="fa fa-code"></i></a>
           {%- endif %}
         </div>
-        <div class="col-sm-6">
-          <a href="{{ '/license'|url }}">License</a> •
+        <div class="col-sm-8">
+          <a href="{{ '/license'|url }}">License & Copyright</a> •
           <a href="{{ '/contact'|url }}">Contact</a> •
           Made with <i class="fa fa-fw fa-heart" title="Heart"><span hidden>Heart</span></i> in Carinthia
         </div>
