--- a/templates/showcase.html
+++ b/templates/showcase.html
@@ -32,5 +32,5 @@
     <small>You want your own website on here?  <a
       href="https://github.com/lektor/lektor-website/tree/master/content/showcase">Fork
     the Lektor Website Repository on GitHub</a> to add your own project.  Make sure to
-    add screenshots and a description about the project.
+    add screenshots and a description about the project.</small>
 {% endblock %}
