--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -34,6 +34,7 @@
             <a href="{{ newer|url }}">Next: {{ newer.title }}</a>
           </div>
         {% endif %}
+        </div>
       </div>
     </div>
   </div>
