Fixed link to blog archive.

--- a/templates/blog-layout.html
+++ b/templates/blog-layout.html
@@ -33,7 +33,7 @@
       </ul>
       <h3>Missed a Post?</h3>
       <ul>
-        <li><a href="{{ '$blog-archive'|url }}">Blog Archives</a>
+        <li><a href="{{ '@blog-archive'|url }}">Blog Archives</a>
       </ul>
     </div>
   </div>
