Fix typos, misspellings, duplicate words

--- a/templates/blog-layout.html
+++ b/templates/blog-layout.html
@@ -16,7 +16,7 @@
       <h3>About This Blog</h3>
       <p>
         “The Transcript” is the blog about <a href="{{ '/'|url
-        }}">Lektor</a>, a new solution in static content managment.
+        }}">Lektor</a>, a new solution in static content management.
       <p>
         Subscribe for the latest news about Lektor as well as content
         management and web development.
