--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4 icon-bar">
-          <a href="https://github.com/lektor/lektor/" title="Lektor on Github"
+          <a href="https://github.com/lektor/lektor/" title="Lektor on GitHub"
             ><i class="fa fa-github"></i></a>
           <a href="https://github.com/lektor/lektor/issues/" title="Report Issues for Lektor"
             ><i class="fa fa-bug"></i></a>
