Set min-height for .showcase.project items

--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -734,6 +734,7 @@ div.admonition {
 
 div.showcase {
   div.project {
+    min-height: 334px;
     > a {
       display: block;
       padding: 10px;
