--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{{ '/static/styles.css'|asseturl }}">
 <link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
+<link rel="shortcut icon" href="{{ '/static/favicon.png'|asseturl }}">
 <title>{% block title %}Hello{% endblock %} | Lektor Static Content Management System</title>
 <body class="{% block bodyclass %}default{% endblock %}">
   <nav class="navbar navbar-inverse navbar-static-top">
