--- a/templates/blog-archive/month.html
+++ b/templates/blog-archive/month.html
@@ -6,7 +6,7 @@
     <a href="{{ '..'|url }}">&laquo; Back to {{ this.year }}</a>
   <ul>
   {% for post in this.items %}
-    <li><a href="{{ post|url }}">{{ post.title }}</a> by {{ post.author }} on {{ post.pub_date|dateformat }}
+    <li><a href="{{ post|url }}">{{ post.title }}</a> by {{ post.author }} on {{ post.pub_date|dateformat }}</li>
   {% endfor %}
   </ul>
 {% endblock %}
