--- a/templates/blog-archive/year.html
+++ b/templates/blog-archive/year.html
@@ -10,9 +10,10 @@
       <ul>
         {% for post in items %}
         <li><a href="{{ post|url }}">{{ post.title }}</a> by {{ post.author }}
-          on {{ post.pub_date|dateformat }}
+          on {{ post.pub_date|dateformat }}</li>
         {% endfor %}
       </ul>
+    </li>
   {% endfor %}
   </ul>
 {% endblock %}
