--- a/templates/blog-layout.html
+++ b/templates/blog-layout.html
@@ -21,12 +21,12 @@
         Subscribe for the latest news about Lektor as well as content
         management and web development.
       <ul>
-        <li><a href="{{ '@atom/transcript'|url }}">RSS Feed</a>
-        <li><a href="https://twitter.com/getlektor">Follow us on Twitter</a>
+        <li><a href="{{ '@atom/transcript'|url }}">RSS Feed</a></li>
+        <li><a href="https://twitter.com/getlektor">Follow us on Twitter</a></li>
       </ul>
       <h3>Missed a Post?</h3>
       <ul>
-        <li><a href="{{ '@blog-archive'|url }}">Blog Archives</a>
+        <li><a href="{{ '@blog-archive'|url }}">Blog Archives</a></li>
       </ul>
     </div>
   </div>
