--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,8 +60,8 @@
           <a href="https://gitter.im/lektor/lektor" title="Chat on Gitter"
             ><i class="fa fa-comment"></i></a>
           {%- if this.path %}
-          <a href="https://github.com/lektor/lektor-website/tree/master/content{{ this.path.split('@')[0]
-            }}/contents.lr" title="View source for this page"><i class="fa fa-code"></i></a>
+          <a href="https://github.com/lektor/lektor-website/tree/master/content{% if this.path != '/'
+            %}{{ this.path.split('@')[0]}}{% endif %}/contents.lr" title="View source for this page"><i class="fa fa-code"></i></a>
           {%- endif %}
         </div>
         <div class="col-sm-8">
