[tl-showcase] Adding Terminal Labs to showcase.

--- a/templates/showcase.html
+++ b/templates/showcase.html
@@ -32,8 +32,8 @@
     <small>You want your own website on here?  <a
       href="https://github.com/lektor/lektor-website/tree/master/content/showcase">Fork
       the Lektor Website Repository on GitHub</a> to add your own project.
-      Make sure to add screenshots and a description about the project.
-      We encourage you to add a link to your source code so that others can
-      learn from your example.
+      Make sure to add screenshots (aspect ratio ~ 1.6:1) and a description
+      about the project. We encourage you to add a link to your source code
+      so that others can learn from your example.
     </small>
 {% endblock %}
