[pluginlist-update] Fixing a few typos and grammar errors. Commenting out github queries. Correcting plugin category.

--- a/templates/plugin-tag.html
+++ b/templates/plugin-tag.html
@@ -24,6 +24,7 @@
   {% endfor %}
 
   <h2>Plugins:</h2>
+  <p>(*) Asterisks denote official plugins.</p>
   <div class="plugin">
     {{ render_plugin_list(this.items) }}
   </div>
