--- a/templates/showcase.html
+++ b/templates/showcase.html
@@ -38,8 +38,11 @@
     <small>You want your own website on here?  <a
       href="https://github.com/lektor/lektor-website/tree/master/content/showcase">Fork
       the Lektor Website Repository on GitHub</a> to add your own project.
-      Make sure to add screenshots (aspect ratio ~ 1.6:1) and a description
-      about the project. We encourage you to add a link to your source code
+      Make sure to add screenshots and a description about the project.
+      The primary screenshot is thumbnailed on this page to 415px wide, and cropped to
+      260px tall, and on your site's individual page the larger images are 870px wide.
+
+      We encourage you to add a link to your source code
       so that others can learn from your example.
     </small>
 {% endblock %}
