--- a/templates/plugin.html
+++ b/templates/plugin.html
@@ -62,7 +62,7 @@
         </div>
         {% if this.tags %}
           {% for t in this.tags|sort %}
-            {{ "and " if (loop.last and this.tags|length > 1) }}
+            {{ "and " if loop.last }}
             <a href="{{ ('/plugins/tag/' ~ t.lower() ~ '/')|url }}">{{ t }}</a>{{ ", " if not loop.last }}
           {% endfor %}
         {% else %}
