Normalization of HTML tags

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,14 @@
-<!doctype html>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{{ '/static/styles.css'|asseturl }}">
-<link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
-<link rel="shortcut icon" href="{{ '/static/favicon.png'|asseturl }}">
-<title>{% block title %}Hello{% endblock %} | Lektor Static Content Management System</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="{{ '/static/styles.css'|asseturl }}">
+  <link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
+  <link rel="shortcut icon" href="{{ '/static/favicon.png'|asseturl }}">
+  <title>{% block title %}Hello{% endblock %} | Lektor Static Content Management System</title>
+</head>
 <body class="{% block bodyclass %}default{% endblock %}">
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
@@ -96,3 +99,4 @@
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 </body>
+</html>
